fix: Updated response of /dir + made it possible to pass params to 'make dev'
